# LegalEase-AI

./: .env.example  .env.railway  .gitattributes  .gitignore  Dockerfile  Makefile  Makefile.k8s  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.railway.yml  docker-compose.yml  railway.json  railway.toml
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_jurisdiction_indexes.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  ai_analysis.py  auth.py  cache.py  chat.py  chat_websocket.py  collaboration.py  database.py  documents.py  jurisdiction.py  router.py  semantic_search.py  tasks.py  websocket.py
backend/app/celery_app/: README.md  __init__.py  celery.py  cli.py  monitoring.py
backend/app/core/: __init__.py  audit.py  auth.py  cache.py  dependencies.py  document_processor.py  encryption.py  exceptions.py  performance.py  security.py
backend/app/database/: __init__.py  connection.py
backend/app/middleware/: __init__.py  security.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  base.py  cache.py  chat.py  collaboration.py  database.py  document.py  health.py  jurisdiction.py  security.py
backend/app/services/: ai_analysis_service.py  cache_warming.py  collaboration_service.py  file_service.py  (+4 more)
backend/examples/: comparative_analyzer_example.py  document_processing_example.py  indian_processor_example.py  jurisdiction_detection_example.py  us_processor_example.py
backend/scripts/: start_celery_beat.py  start_celery_worker.py
(+112 files in other folders)
